--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -18,6 +18,7 @@
       <span>Tommy "Terrible Dev" Parnell</span>
       <ul class="sidebarBtns">
           <li><a href="/" class="link-unstyled">Home</a></li>
+          <li><a href="/about" class="link-unstyled">About</a></li>
           <li><a href="/all-tags/" class="link-unstyled">Tags</a></li>
           <li><a href="/rss.xml" class="link-unstyled">RSS Feed</a></li>
           <li><a href="https://github.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Github</a></li>
