--- a/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
@@ -30,5 +30,5 @@
     <script type="application/ld+json">
         @Html.Raw(Model.SiteLDString)
     </script>
-
+    <link rel="canonical" href="https://blog.terrible.dev/">
 }
