--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -12,11 +12,14 @@
     <meta name="theme-color" content="#4A4A4A" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="alternate" type="application/atom+xml" title="RSS" href="/rss.xml">
+    @if(!amp)
+    {
+        <environment names="Production">
+            <partial name="Gtm" />
+        </environment>
+    }
     <link rel="manifest" href="~/manifest.json" asp-append-version="true">
     <link asp-append-version="true" rel="icon" href="~/favicon.ico" />
-    <environment names="Production">
-        <partial name="Gtm" />
-    </environment>
     <title>@ViewData["Title"] | @config.Title</title>
     @if(amp) 
     {
@@ -57,6 +60,9 @@
        <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
         <script async src="https://cdn.ampproject.org/v0.js"></script>
         <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+        <environment names="Production">
+            <partial name="Gtm" />
+        </environment>
     }
     @RenderSection("Head", false)
 </head>
