rename push header

--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -29,22 +29,22 @@
     else 
     {
         <environment names="Development">
-            <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
+            <link http-2-push asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
         </environment>
         <environment names="Production">
-            <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
+            <link http-2-push asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
         </environment>
             <environment names="Development">
-        <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.css" />
+        <link http-2-push asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.css" />
         </environment>
         <environment names="Production">
-            <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.min.css" />
+            <link http-2-push asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.min.css" />
         </environment>
         <environment names="Development">
-            <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.css" />
+            <link http-2-push asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.css" />
         </environment>
         <environment names="Production">
-            <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.min.css" />
+            <link http-2-push asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.min.css" />
         </environment>
         <environment names="Development">
             <link asp-append-version="true" rel="preload" as="script" href="~/js/swi.js" />
