--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -29,28 +29,10 @@
     else 
     {
         <environment names="Development">
-            <link http-2-push asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
+            <inline-style amp-custom href="css/site.css,css/site.desktop.css,css/site.mobile.css"></inline-style>
         </environment>
         <environment names="Production">
-            <link http-2-push asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
-        </environment>
-            <environment names="Development">
-        <link http-2-push asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.css" />
-        </environment>
-        <environment names="Production">
-            <link http-2-push asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.min.css" />
-        </environment>
-        <environment names="Development">
-            <link http-2-push asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.css" />
-        </environment>
-        <environment names="Production">
-            <link http-2-push asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.min.css" />
-        </environment>
-        <environment names="Development">
-            <link asp-append-version="true" rel="preload" as="script" href="~/js/swi.js" />
-        </environment>
-        <environment names="Production">
-            <link asp-append-version="true" rel="preload" as="script" href="~/js/site.min.js" />
+            <inline-style amp-custom href="css/site.min.css,css/site.desktop.min.css,css/site.mobile.min.css"></inline-style>
         </environment>
     }
 
