only have prism styles on markdown pages

--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -10,6 +10,7 @@
 </cache>
 
 @section Head {
+    <inline-style href="css/prism.css"></inline-style>
     <meta name="description" content="@Model.Post.Content.SummaryPlainShort" />
     <meta property="og:type" content="blog">
     <meta property="og:title" content="@Model.Post.Title">
