--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -23,16 +23,16 @@
     <title>@ViewData["Title"] | @config.Title</title>
     @if(amp) 
     {
-        <inline-style amp-custom href="css/site.css,css/site.desktop.css,css/site.mobile.css"></inline-style>
+        <inline-style amp-custom href="css/site.css,css/site.mobile.css,css/site.desktop.css"></inline-style>
 
     }
     else 
     {
         <environment names="Development">
-            <inline-style amp-custom href="css/site.css,css/site.desktop.css,css/site.mobile.css"></inline-style>
+            <inline-style href="css/site.css,css/site.mobile.css,css/site.desktop.css"></inline-style>
         </environment>
         <environment names="Production">
-            <inline-style amp-custom href="css/site.min.css,css/site.desktop.min.css,css/site.mobile.min.css"></inline-style>
+            <inline-style href="css/site.min.css,css/site.mobile.min.css,css/site.desktop.min.css"></inline-style>
         </environment>
     }
 
