--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -10,11 +10,15 @@
       }
       else
       {
-        <desktop>
+        <picture class="navHero">
+          <source srcset="/content/tommyAvatar4.jpg.webp" loading="lazy" type="image/webp" alt="An image of TerribleDev" class="round" />
+          <img src="/content/tommyAvatar4.jpg" loading="lazy" alt="An image of TerribleDev" class="round" />
+      </picture>
+        @* <desktop>
             <picture class="navHero">
-            <img src="/content/tommyAvatar4.jpg.webp" loading="lazy" alt="An image of TerribleDev" class="round" push  />
+                <img src="/content/tommyAvatar4.jpg.webp" loading="lazy" alt="An image of TerribleDev" class="round" push  />
             </picture>
-        </desktop>
+        </desktop> *@
       }
       <span>Tommy "Terrible Dev" Parnell</span>
       <ul class="sidebarBtns">
