--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -1,5 +1,4 @@
-﻿
-<nav class="navBar hide" id="navBar">
+﻿<nav class="navBar hide" id="navBar">
   <div class="navContent">
     <picture class="navHero">
           <source srcset="/content/tommyAvatar4.jpg.webp" loading="lazy" type="image/webp" alt="An image of TerribleDev" class="round" />
@@ -14,7 +13,6 @@
           <li><a href="https://github.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Github</a></li>
           <li><a href="https://twitter.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Twitter</a></li>
           <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
-          <li><span class="link-unstyled" id="closeNav">Close Navbar</span></li>
       </ul>
     </div>
 </nav>
