--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -1,37 +1,1 @@
-﻿
-@{
-    Layout = null;
-    var amp = ViewData["amp"] as bool? ?? false;
-}
-@if(!amp)
-{
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-48128396-1');
-        document.addEventListener('DOMContentLoaded', function () {
-            setTimeout(() => {
-                var script = document.createElement('script');
-                script.src = 'https://www.googletagmanager.com/gtag/js?id=UA-48128396-1';
-                script.async = true
-                document.body.appendChild(script);
-            }, 4000)
-        });
-    </script>
-}
-else
-{
-    <amp-analytics type="gtag" data-credentials="include">
-    <script type="application/json">
-        {
-            "vars" : {
-                "gtag_id": "UA-48128396-1",
-                "config" : {
-                "UA-48128396-1": { "UA-48128396-1": "default"  }
-                }
-            }
-        }
-    </script>
-    </amp-analytics>
-}
+﻿<script defer data-domain="blog.terrible.dev" src="https://plausible.io/js/plausible.js"></script>
