--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -1,55 +1,35 @@
 ﻿@inject BlogConfiguration config
 
-@{
-    var amp = ViewData["amp"] as bool? ?? false;
-    var htmlTag = amp ? "amp" : "";
-}
+
 <!DOCTYPE html>
-<html lang="en"  @htmlTag>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    @if(!amp)
-    {
-        <environment names="Production">
-            <partial name="Gtm" />
-        </environment>
-    }
 
     <title>@ViewData["Title"] | @config.Title</title>
-    @if(amp) 
-    {
-        <inline-style amp-custom href="css/site.css,css/site.mobile.css,css/site.desktop.css"></inline-style>
-
-    }
-    else 
-    {
         <environment names="Development">
-            <inline-style href="css/site.css,css/site.mobile.css,css/site.desktop.css"></inline-style>
-            @* <desktop>
-                <inline-style href="css/site.css,css/site.desktop.css"></inline-style>
-            </desktop>
-            <mobile>
-                <inline-style href="css/site.css,css/site.mobile.css"></inline-style>
-            </mobile> *@
-        </environment>
-        <environment names="Production">
-            @* <desktop>
-                <inline-style href="css/site.min.css,css/site.desktop.min.css"></inline-style>
-            </desktop>
-            <mobile>
-                <inline-style href="css/site.min.css,css/site.mobile.min.css"></inline-style>
-            </mobile> *@
-            <inline-style href="css/site.min.css,css/site.mobile.min.css,css/site.desktop.min.css"></inline-style>
-        </environment>
-    }
+        <inline-style href="css/site.css,css/site.mobile.css,css/site.desktop.css"></inline-style>
+        @* <desktop>
+            <inline-style href="css/site.css,css/site.desktop.css"></inline-style>
+        </desktop>
+        <mobile>
+            <inline-style href="css/site.css,css/site.mobile.css"></inline-style>
+        </mobile> *@
+    </environment>
+    <environment names="Production">
+        @* <desktop>
+            <inline-style href="css/site.min.css,css/site.desktop.min.css"></inline-style>
+        </desktop>
+        <mobile>
+            <inline-style href="css/site.min.css,css/site.mobile.min.css"></inline-style>
+        </mobile> *@
+        <inline-style href="css/site.min.css,css/site.mobile.min.css,css/site.desktop.min.css"></inline-style>
+    </environment>
+    <environment names="Production">
+        <partial name="Gtm" />
+    </environment>
 
 
-    @if(amp) 
-    {
-       <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-        <script async src="https://cdn.ampproject.org/v0.js"></script>
-        <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-    }
     <meta name="theme-color" content="#4A4A4A" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="alternate" type="application/atom+xml" title="RSS" href="/rss.xml">
@@ -62,14 +42,7 @@
   <a class="skip-main" href="#main">Skip to main content</a>
   <div class="rootbox">
       <header class="header">
-          @if(amp)
-          {
-              <a class="btn" id="menuBtn" href="/"> back to home </a>
-          }
-          else
-          {
-              <svg aria-label="Open Menu" id="menuBtn" role="button" xmlns="http://www.w3.org/2000/svg" width="32" height="32"><path d="M4 10h24c1.104 0 2-.896 2-2s-.896-2-2-2H4c-1.104 0-2 .896-2 2s.896 2 2 2zm24 4H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2zm0 8H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2z" /></svg>
-          }
+          <svg aria-label="Open Menu" id="menuBtn" role="button" xmlns="http://www.w3.org/2000/svg" width="32" height="32"><path d="M4 10h24c1.104 0 2-.896 2-2s-.896-2-2-2H4c-1.104 0-2 .896-2 2s.896 2 2 2zm24 4H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2zm0 8H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2z" /></svg>
           <div class="headerCallout"><a href="/" class="link-unstyled ">@config.Title</a></div>
       </header>
       <partial name="Nav" />
@@ -78,8 +51,6 @@
           </main>
       </div>
     </div>
-    @if(!amp)
-    {
         @RenderSection("Scripts", required: false)
         <environment names="Development">
             <script asp-append-version="true" src="~/js/swi.js" async></script>
@@ -87,12 +58,5 @@
         <environment names="Production">
             <script asp-append-version="true" src="~/js/site.min.js" async></script>
         </environment>
-    }
-    else
-    {
-        <environment names="Production">
-            <partial name="Gtm" />
-        </environment>
-    }
 </body>
 </html>
