--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -1,1 +1,14 @@
-﻿<script defer data-domain="blog.terrible.dev" src="https://plausible.io/js/plausible.js"></script>
+﻿    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-48128396-1');
+        document.addEventListener('DOMContentLoaded', function () {
+            setTimeout(() => {
+                var script = document.createElement('script');
+                script.src = 'https://www.googletagmanager.com/gtag/js?id=UA-48128396-1';
+                script.async = true
+                document.body.appendChild(script);
+            }, 4000)
+        });
+    </script>
