--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -1,6 +1,6 @@
 ﻿<input type="checkbox" id="menu-toggle"/>
 <label for="menu-toggle" id="menuLabel"  role="button">
-        <svg aria-label="Open Menu" id="menuBtn" width="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 88c0-13.25 10.75-24 24-24h400c13.3 0 24 10.75 24 24 0 13.3-10.7 24-24 24H24c-13.25 0-24-10.7-24-24zm0 160c0-13.3 10.75-24 24-24h400c13.3 0 24 10.7 24 24s-10.7 24-24 24H24c-13.25 0-24-10.7-24-24zm424 184H24c-13.25 0-24-10.7-24-24s10.75-24 24-24h400c13.3 0 24 10.7 24 24s-10.7 24-24 24z"/></svg>
+        <svg aria-label="Open Menu" id="menuBtn" width="16" hight="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M0 88C0 74.75 10.75 64 24 64H424C437.3 64 448 74.75 448 88C448 101.3 437.3 112 424 112H24C10.75 112 0 101.3 0 88zM0 248C0 234.7 10.75 224 24 224H424C437.3 224 448 234.7 448 248C448 261.3 437.3 272 424 272H24C10.75 272 0 261.3 0 248zM424 432H24C10.75 432 0 421.3 0 408C0 394.7 10.75 384 24 384H424C437.3 384 448 394.7 448 408C448 421.3 437.3 432 424 432z"/></svg>
 </label>
 <nav class="navBar" id="navBar">
   <div class="navContent">
