--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -14,7 +14,7 @@
           <li><a href="https://github.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Github</a></li>
           <li><a href="https://twitter.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Twitter</a></li>
           <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
-          <li><span class="link-unstyled" id="closeNav">Close Navbar</span></li>
+          <li><span onclick="toggleNav()" class="link-unstyled" id="closeNav">Close Navbar</span></li>
       </ul>
     </div>
 </nav>
